--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "bitcoind-rpc-dash",
-  "description": "Dash Client Library to connect to Dash Core via RPC",
+  "name": "bitcoind-rpc-dinero",
+  "description": "Dinero Client Library to connect to Dinero Core via RPC",
   "version": "1.0.1",
   "author": {
     "name": "Stephen Pair",
@@ -25,16 +25,16 @@
     },
     {
       "name": "Alex Werner",
-      "email": "alex.werner@dash.org"
+      "email": "alex.werner@dinero.org"
     }
   ],
   "keywords": [
-    "dash",
+    "dinero",
     "rpc"
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/dashevo/bitcoind-rpc-dash"
+    "url": "https://github.com/dinerocoin/bitcoind-rpc-dinero"
   },
   "license": "MIT",
   "main": "lib/index.js",
@@ -53,7 +53,7 @@
     "sinon": "^1.12.2"
   },
   "bugs": {
-    "url": "https://github.com/dashevo/bitcoind-rpc-dash/issues"
+    "url": "https://github.com/dinerocoin/bitcoind-rpc-dinero/issues"
   },
-  "homepage": "https://github.com/dashevo/bitcoind-rpc-dash"
+  "homepage": "https://github.com/dinerocoin/bitcoind-rpc-dinero"
 }
