--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "bitcoind-rpc-dinero",
-  "description": "Dinero Client Library to connect to Dinero Core via RPC",
+  "name": "bitcoind-rpc-dextro",
+  "description": "Dextro Client Library to connect to Dextro Core via RPC",
   "version": "1.0.1",
   "author": {
     "name": "Stephen Pair",
@@ -29,12 +29,12 @@
     }
   ],
   "keywords": [
-    "dinero",
+    "dextro",
     "rpc"
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/dinerocoin/bitcoind-rpc-dinero"
+    "url": "https://github.com/Al3xxx19/bitcoind-rpc-dextro"
   },
   "license": "MIT",
   "main": "lib/index.js",
@@ -53,7 +53,7 @@
     "sinon": "^1.12.2"
   },
   "bugs": {
-    "url": "https://github.com/dinerocoin/bitcoind-rpc-dinero/issues"
+    "url": "https://github.com/Al3xxx19/bitcoind-rpc-dextro/issues"
   },
-  "homepage": "https://github.com/dinerocoin/bitcoind-rpc-dinero"
+  "homepage": "https://github.com/Al3xxx19/bitcoind-rpc-dextro"
 }
